# Fastapi_movies

./: .env.example  .gitignore  Dockerfile  Dockerfile_production  README.md  docker-compose.dev.yml  docker-compose.yml  dump.sql  plan.md  pyproject.toml  requirements.txt  requirements_dev.txt
app/: main.py
app/api/v1/: films.py  genres.py  persons.py
app/core/: config.py
app/models/: base_model.py  film.py  genre.py  persons.py
app/services/: base.py  film.py  person.py
app/utils/: pagination.py  paginator.py
etl/: config.py  data_transform.py  load_data.py
etl/adapters/: elasticsearch_loader.py  postgres_extractor.py
etl/models/: dto.py
etl/scripts/: genres.sh  movies.sh  persons.sh
nginx/configs/: site.conf
src/: main.py
src/api/v1/: films.py
