[tool.poetry]
name = "docs_fastapi"
version = "0.1.0"
description = ""
authors = ["Doskhan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
email-validator = "^2.1.0.post1"
pydantic = "^1.10.4"
elasticsearch = "^8.6.0"
redis = "^4.5.1"
orjson = "^3.6.8"
uvloop = { version = "0.17.0", markers = "sys_platform != 'win32' and platform_python_implementation == 'CPython'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"